Cátia, a toina! Zé zé dos zé zés

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <img class="logo-container" src="imgs/logo.svg">
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     ENCONTRAR UMA VIATURA
                 </li>
