--- a/index.html
+++ b/index.html
@@ -46,6 +46,76 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div id="interim-info">
+            <h2>PESQUISE E RESERVE ON-LINE</h2>
+            <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
+                forma cómoda. Pesquise e reserve on-line.</p>
+            <p>Agora pode optar pelo nosso serviço de entrega em sua casa<sup>1</sup>. De outra forma, os nossos 80
+                pontos de venda
+                estão prontos para o receber.</p>
+            <p>[1] Nos concessionários aderentes.</p>
+        </div>
+        <div id="compromises-info">
+            <h2><a>COMPROMISSOS DO SITE</a></h2>
+            <ul>
+                <li><img src="imgs/icons/check-circle.svg">
+                    <p>SATISFAÇÃO OU REEMBOLSO</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>REDE DE ASSISTÊNCIA NACIONAL</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>ASSISTÊNCIA EM VIAGEM</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>FINANCIAMENTO PERSONALIZADO</p>
+                </li>
+            </ul>
+        </div>
+        <div id="opportunities-info">
+            <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
+        </div>
+    </main>
+    <footer>
+        <div id="discover-new">
+            <h2>
+                DESCUBRA TAMBÉM...
+            </h2>
+            <ul>
+                <li>
+                    <p>Categorias</p>
+                    <ul class="discover-column">
+                        <li>SUV's e 4x4</li>
+                        <li>Carrinhas</li>
+                        <li>Berlinas</li>
+                        <li>Familiares</li>
+                        <li>Citadinos</li>
+                    </ul>
+                </li>
+                <li>
+                    <p>Características</p>
+                    <ul class="discover-column">
+                        <li>Usado com 4 rodas motorizes</li>
+                        <li>Usado com 7 lugares</li>
+                        <li>Usados Híbridos</li>
+                        <li>Usados Elétricos</li>
+                        <li>Usados com mudanças automáticas</li>
+                    </ul>
+                </li>
+                <li>
+
+                </li>
+                <li>
+
+                </li>
+            </ul>
+        </div>
+        <div id="footer-last"></div>
+    </footer>
 </body>
 
 </html>
