Adicionei o menu McDonals

--- a/index.html
+++ b/index.html
@@ -2,49 +2,56 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link href='https://css.gg/menu-boxed.css' rel='stylesheet'>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <img class="logo-container" src="imgs/logo.svg">
-        <nav>
-            <ul id="menu">
-                <li>
-                    ENCONTRAR UMA VIATURA
-                </li>
-                <li>
-                    CAMPANHAS
-                </li>
-                <li>
-                    COMERCIAIS USADOS
-                </li>
-                <li>
-                    ELÉTRICOS E HIBRIDOS USADOS
-                </li>
-                <li>
-                    RETOMA
-                </li>
-                <li>
-                    OS NOSSOS PONTOS DE VENDA
-                </li>
-                <li>
-                    QUEM SOMOS
-                </li>
-                <li>
-                    VÍDEOS
-                </li>
-                <li>
-                    GUIA DO COMPRADOR
-                </li>
-                <li class="nav-separator">
-                    |
-                </li>
-                <li>
-                    A MINHA SELEÇÃO
-                </li>
-            </ul>
-        </nav>
+        <div id="sandwich-nav" class="nav-display">
+            <i class="gg-menu-boxed icon"></i>
+            <img class="logo-container" src="imgs/logo.svg">
+            <i class="gg-user icon"></i>
+        </div>
+        <div id="normal-nav" class="nav-display">
+            <img class="logo-container" src="imgs/logo.svg">
+            <nav>
+                <ul>
+                    <li>
+                        ENCONTRAR UMA VIATURA
+                    </li>
+                    <li>
+                        CAMPANHAS
+                    </li>
+                    <li>
+                        COMERCIAIS USADOS
+                    </li>
+                    <li>
+                        ELÉTRICOS E HIBRIDOS USADOS
+                    </li>
+                    <li>
+                        RETOMA
+                    </li>
+                    <li>
+                        OS NOSSOS PONTOS DE VENDA
+                    </li>
+                    <li>
+                        QUEM SOMOS
+                    </li>
+                    <li>
+                        VÍDEOS
+                    </li>
+                    <li>
+                        GUIA DO COMPRADOR
+                    </li>
+                    <li class="nav-separator">
+                        |
+                    </li>
+                    <li>
+                        A MINHA SELEÇÃO
+                    </li>
+                </ul>
+            </nav></span>
     </header>
     <main>
         <div id="interim-info">
