Zé Zé camarinha

--- a/index.html
+++ b/index.html
@@ -82,9 +82,38 @@
                     <p>FINANCIAMENTO PERSONALIZADO</p>
                 </li>
             </ul>
+            <p id="phrase">VER OS NOSSOS COMPROMISSO, AS NOSSAS GARANTIAS E AS VANTAGENS SPOTICAR PARA A COMPRA DE UM VEÍCULO ELÉTRICO OU HÍBRIDO > </p>
         </div>
         <div id="opportunities-info">
             <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
+            <ul class="first-line">
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>OPORTUNIDADES PREMIUM</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>OPORTUNIDADES PREÇOS BAIXOS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>USADOS EM CAMPANHA</p>
+                </li>
+            </ul>
+            <ul class="second-line">
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>COMERCIAIS USADOS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>OPORTUNIDADES ELÉTRICAS</p>
+                </li>
+                <li>
+                    <img src="imgs/icons/check-circle.svg">
+                    <p>OPORTUNIDADES HÍBRIDAS</p>
+                </li>
+            </ul>
         </div>
     </main>
     <footer>
@@ -94,18 +123,19 @@
             </h2>
             <ul>
                 <li>
-                    <p>Categorias</p>
                     <ul class="discover-column">
+                        <li><p>Categorias</p></li>
                         <li>SUV's e 4x4</li>
                         <li>Carrinhas</li>
                         <li>Berlinas</li>
                         <li>Familiares</li>
                         <li>Citadinos</li>
+                        <li>ver mais</li>
                     </ul>
                 </li>
                 <li>
-                    <p>Características</p>
                     <ul class="discover-column">
+                        <li><p>Características</p></li>
                         <li>Usado com 4 rodas motorizes</li>
                         <li>Usado com 7 lugares</li>
                         <li>Usados Híbridos</li>
@@ -114,14 +144,188 @@
                     </ul>
                 </li>
                 <li>
-
+                    <ul class="discover-column">
+                        <li><p>Outros</p></li>
+                        <li>Usados premium</li>
+                        <li>Usados recentes</li>
+                        <li>Usados a menos de 15000€</li>
+                        <li>Usados a menos de 20000€</li>
+                    </ul>
+                </li>
+            </ul>
+            
+            <h2>
+                PESQUISAR POR LOCALIZAÇÃO
+            </h2>
+            <ul>
+                <li>
+                    <ul class="discover-column">
+                        <li><p>Regiões</p></li>
+                        <li>Norte</li>
+                        <li>Centro</li>
+                        <li>Sul</li>
+                        <li>Madeira</li>
+                        <li>Açores</li>
+                    </ul>
                 </li>
                 <li>
-
+                    <ul class="discover-column">
+                        <li><p>Regiões</p></li>
+                        <li>Grande Lisboa</li>
+                        <li>Grande Porto</li>
+                        <li>Alentejo</li>
+                        <li>Algarve</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="discover-column">
+                        <li><p>Cidades</p></li>
+                        <li>Porto</li>
+                        <li>Lisboa</li>
+                        <li>Coimbra</li>
+                        <li>Almada</li>
+                        <li>Santarém</li>
+                        <li>ver mais</li>
+                    </ul>
                 </li>
             </ul>
         </div>
-        <div id="footer-last"></div>
+
+        <div id="footer-last">
+            <h2>MARCAS</h2>
+            <ul>
+                <li>
+                    <ul class="brands">
+                        <li><p>OPEL USADOS</p></li>
+                        <li>Astra</li>
+                        <li>Corsa</li>
+                        <li>Grandland</li>
+                        <li>Crossland</li>
+                        <li>Insignia</li>
+                        <li>Mokka</li>
+                        <li>Outros Modelos</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>CITROEN USADOS</p></li>
+                        <li>C4</li>
+                        <li>C5 Aircross</li>
+                        <li>C3</li>
+                        <li>C4 Cactus</li>
+                        <li>C3 Aircross</li>
+                        <li>Berlingo</li>
+                        <li>Outros Modelos</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>PEUGOT USADOS</p></li>
+                        <li>308</li>
+                        <li>2008</li>
+                        <li>208</li>
+                        <li>3008</li>
+                        <li>508</li>
+                        <li>Partener</li>
+                        <li>Outros Modelos</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>DS AUTOMOBILES USADOS</p></li>
+                        <li>DS7 Crossback</li>
+                        <li>DS3 Crossback</li>
+                        <li>DS4</li>
+                        <li>DS9</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>FIAT USADOS</p></li>
+                        <li>500</li>
+                        <li>Doblo</li>
+                        <li>Punto</li>
+                        <li>Panda</li>
+                        <li>Tipo</li>
+                        <li>Talento</li>
+                        <li>Outros Modelos</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>VOLKSWAGEN</p></li>
+                        <li>Sem resultados</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <ul class="brands">
+                        <li><p>RENAUT</p></li>
+                        <li>Kadjar</li>
+                        <li>Megane</li>
+                        <li>Captur</li>
+                        <li>Clio</li>
+                        <li>Grand Scenic</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>NISSAN</p></li>
+                        <li>Qashqai</li>
+                        <li>X-Trail</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>KIA</p></li>
+                        <li>Niro</li>
+                        <li>Picanto</li>
+                        <li>Sportage</li>
+                        <li>Stonic</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>FORD</p></li>
+                        <li>Toumeo</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>SEAT</p></li>
+                        <li>Ateca</li>
+                        <li>Ibiza</li>
+                        <li>Leon</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul class="brands">
+                        <li><p>OUTRAS MARCAS</p></li>
+                        <li>MAZDA</li>
+                        <li>HYUNDAY</li>
+                        <li>JEEP</li>
+                        <li>MITSUBISHI</li>
+                        <li>MINI</li>
+                        <li>BMW</li>
+                        <li class="all">VER TUDO</li>
+                    </ul>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <li>Mapa do site</li>
+                    <li>Mapa do site retoma</li>
+                    <li>DS Certified</li>
+                    <li>Opel Usados Certificados</li>
+                    <li>Resolução de litígios</li>
+                    <li>Menções Legais</li>
+                    <li>Consentimento de cookies</li>
+                    <li>Política de Cookies</li>
+                    <li>Política de Privacidade</li>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
