--- a/index.html
+++ b/index.html
@@ -51,9 +51,23 @@
                         A MINHA SELEÇÃO
                     </li>
                 </ul>
-            </nav></span>
+            </nav>
+        <div>
+            
+        </div>    
     </header>
     <main>
+        <div id="oficial-network">
+            <ul>
+                <li><p>CARROS USADOS DA NOSSA REDE OFICIAL</p></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+                <li><img src="imgs/icons/check-circle.svg"></li>
+            </ul>
+        </div>
         <div id="interim-info">
             <h2>PESQUISE E RESERVE ON-LINE</h2>
             <p>Na <strong>Spoticar</strong>, dispomos de um vasto stock de veículos semi-novos aos quais pode aceder de
@@ -124,7 +138,7 @@
             <ul>
                 <li>
                     <ul class="discover-column">
-                        <li><p>Categorias</p></li>
+                        <li><p class="">Categorias</p></li>
                         <li>SUV's e 4x4</li>
                         <li>Carrinhas</li>
                         <li>Berlinas</li>
