--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
         <div id="compromises-info">
             <h2><a>COMPROMISSOS DO SITE</a></h2>
             <ul>
-                <li><img src="imgs/icons/check-circle.svg">
+                <li><img src="imgs/icons/check.png">
                     <p>SATISFAÇÃO OU REEMBOLSO</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/car.png">
                     <p>REDE DE ASSISTÊNCIA NACIONAL</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/cell.png">
                     <p>ASSISTÊNCIA EM VIAGEM</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/calc.png">
                     <p>FINANCIAMENTO PERSONALIZADO</p>
                 </li>
             </ul>
@@ -142,32 +142,45 @@
             <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
             <ul>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/1.png">
                     <p>OPORTUNIDADES PREMIUM</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/2.png">
                     <p>OPORTUNIDADES PREÇOS BAIXOS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/3.png">
                     <p>USADOS EM CAMPANHA</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/4.png">
                     <p>COMERCIAIS USADOS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/5.png">
                     <p>OPORTUNIDADES ELÉTRICAS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/check-circle.svg">
+                    <img src="imgs/icons/6.png">
                     <p>OPORTUNIDADES HÍBRIDAS</p>
                 </li>
             </ul>
         </div>
     </main>
+    <div>
+        <div id="banner1">
+            <img src="imgs/SUV1_banner_pre-footer1.jpeg" class="banner">
+            <div class="centered">O SEU SUV USADO
+                <br><br>
+            COMO ESCOLHER BEM O SEU SUV USADO</div>
+            <div class="centered-bottom" id="button1">LEIA MAIS</div>
+        </div>
+        
+        <div id="banner1">
+            <img src="imgs/Occ_banner_pre-footer2.jpeg" class="banner">
+        </div>
+    </div>
     <footer>
         <div id="discover-new">
             <h2>
@@ -430,8 +443,7 @@
                     </ul>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="last_line">
                 <li>Mapa do site</li>
                 <li>Mapa do site retoma</li>
                 <li>DS Certified</li>
@@ -441,7 +453,6 @@
                 <li>Consentimento de cookies</li>
                 <li>Política de Cookies</li>
                 <li>Política de Privacidade</li>
-                </li>
             </ul>
         </div>
     </footer>
