--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         max="999999" step="1" required> km</div>
                 <input type="submit" value="Calcular">
             </form>
-            <div class="finance-results">
+            <div id="finance-results">
                 <div>
                     <h3>Como Novo</h3>
                     <ul>
